# beemovie-cli

./: Cargo.toml  README.md
src/: help.rs  main.rs
