[package]
name = "beemovie-cli"
version = "0.1.3"
authors = ["Rooster <roosterchicken@protonmail.ch>"]
edition = "2018"
description = "Bee Movie CLI Application."
repository = "https://github.com/roosterchicken/beemovie-cli"
keywords = ["beemovie", "cli", "binary", "generator", "text"]
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beemovie = "1.0.1"
